--- a/client/src/app/users/user-list/user-list.component.html
+++ b/client/src/app/users/user-list/user-list.component.html
@@ -1,1 +1,5 @@
-<p>user-list works!</p>
+<ul>
+  <li *ngFor="let user of users">
+    <a [routerLink]="['/users', user.id]">{{user.name}}</a>
+  </li>
+</ul>
